--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,8 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Users/DELL/Downloads/Librerias/hamcrest-core-1.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/DELL/Downloads/Librerias/junit-4.13.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
+	<classpathentry kind="lib" path="C:/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="C:/junit-4.11.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
